corrected the type in the link alternate of the second example of section 2

--- a/extensions/payload examples.html
+++ b/extensions/payload examples.html
@@ -112,7 +112,7 @@ The object-type that should be used in this case is the Activity Streams' commen
  &nbsp;&nbsp;    &nbsp;&nbsp;    &nbsp;&nbsp;   	    &lt;email&gt;hamlet@gmail.com&lt;/email&gt; <br> 
  &nbsp;&nbsp;    &nbsp;&nbsp;     	  &lt;/author&gt; <br> 
 	<font color="red">
- &nbsp;&nbsp;  &nbsp;&nbsp;      	 &lt;link rel="alternate" type="text/html" href="xmpp:hamlet@denmark.lit?;node=urn:xmpp:microblog:0:replies:item=urn:uuid:c41b4b7b-5aaf-4d0d-a66d-33d40695f587"/&gt; <br> 
+ &nbsp;&nbsp;  &nbsp;&nbsp;      	 &lt;link rel="alternate" type="application/atom+xml" href="xmpp:hamlet@denmark.lit?;node=urn:xmpp:microblog:0:replies:item=urn:uuid:c41b4b7b-5aaf-4d0d-a66d-33d40695f587"/&gt; <br> 
  &nbsp;&nbsp;   &nbsp;&nbsp;    	&lt;thr:in-reply-to ref="urn:uuid:c40db068-38b7-46f5-948a-e9eac877e87b" href="xmpp:juliet@capulet.lit?;node=urn:xmpp:microblog:0;item=urn:uuid:c40db068-38b7-46f5-948a-e9eac877e87b"/&gt;</font> <br>  
          
     &nbsp;&nbsp;     &nbsp;&nbsp;         &lt;title&gt;I think that's a great idea!&lt;/title&gt; <br> 
